Fixed scroll for overflowing forms in desktop. Scroll color secondary.

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@
   --bg-primary: #1a1a1a;
   --bg-secondary: #222;
   --bg-tertiary: #333;
-  --layout-padding: 2rem;
+  --layout-padding: 1rem;
   --handle-diameter: 0.8rem;
   --button-height: 2.6rem;
   --button-radius: 0.5rem;
@@ -46,7 +46,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--primary);
+  background: var(--secondary);
 }
 
 .noselect {
@@ -95,33 +95,33 @@ li {
 }
 
 .container-tool {
+  flex: 1;
   display: grid;
   grid-template-columns: minmax(0, 3fr) minmax(0, 7fr);
   padding-right: var(--layout-padding);
   padding-left: var(--layout-padding);
-  gap: calc(var(--layout-padding) / 2);
-  height: 100%;
+  gap: var(--layout-padding);
   overflow-y: auto;
 }
 
 .container-input {
+  display: flex;
+  flex-direction: column;
   overflow-y: auto;
 }
 
 .container-forms {
-  /* overflow-y: auto; */
-  /* padding-right: calc(var(--layout-padding) / 2); */
+  flex: 1;
+  overflow-y: auto;
+  padding-right: var(--layout-padding);
+  padding-left: var(--layout-padding);
+  padding-bottom: 1rem;
   word-break: break-all;
 }
 
 .output {
   display: flex;
   flex-direction: column;
-}
-
-form {
-  /* height: fit-content; */
-  /* overflow-y: auto; */
 }
 
 input {
@@ -379,7 +379,7 @@ input[type="checkbox"]:checked + label {
 
 input[type="button"]:hover {
   font-weight: 300;
-  color: (var(--primary));
+  color: var(--primary);
   border: 1px solid var(--secondary);
   background-color: var(--bg-secondary);
 }
@@ -402,8 +402,8 @@ input[type="button"] {
   align-items: center;
   margin-bottom: var(--layout-padding);
   margin-top: 5px;
-  padding-left: calc(var(--layout-padding) / 2);
-  padding-right: calc(var(--layout-padding) / 2);
+  padding-left: var(--layout-padding);
+  padding-right: var(--layout-padding);
 }
 
 .grayed-circle {
@@ -451,8 +451,8 @@ input[type="button"] {
   display: flex;
   height: 80px;
   width: 100%;
-  margin-bottom: calc(var(--layout-padding) / 4);
-  gap: calc(var(--layout-padding) / 4);
+  margin-bottom: calc(var(--layout-padding) / 2);
+  gap: calc(var(--layout-padding) / 2);
 }
 
 .card {
@@ -462,7 +462,7 @@ input[type="button"] {
   width: 100%;
   flex-grow: 1;
   text-align: center;
-  padding: calc(var(--layout-padding) / 4);
+  padding: calc(var(--layout-padding) / 2);
   border-radius: var(--button-radius);
   background-color: var(--bg-secondary);
   & h3 {
@@ -487,7 +487,7 @@ input[type="button"] {
   display: grid;
   grid-template-columns: repeat(6, minmax(0, 1fr));
   grid-template-rows: repeat(2, minmax(0, 1fr));
-  gap: calc(var(--layout-padding) / 4);
+  gap: calc(var(--layout-padding) / 2);
 }
 
 .chart1 {
@@ -512,7 +512,7 @@ input[type="button"] {
 }
 
 .ng-chart {
-  padding: calc(var(--layout-padding) / 2);
+  padding: var(--layout-padding);
   border-radius: var(--button-radius);
   background-color: var(--bg-secondary);
   word-break: break-all;
